[gd_scene load_steps=8 format=2]

[ext_resource path="res://nodes/camera_system/node/CameraSystemNode.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/power_ups/star_silver.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/power_ups/star_bronze.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/power_ups/star_gold.png" type="Texture" id=4]
[ext_resource path="res://tests/game/nodes/script/test_camera_system.gd" type="Script" id=5]
[ext_resource path="res://nodes/member_group/node/MemberGroupNode.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "cameras"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 30, 60 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2/Camera2D2:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 50, -30 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3/Camera2D3:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -50, -30 ), Vector2( 0, 0 ) ]
}

[node name="test_camera_system" type="Node"]
script = ExtResource( 5 )

[node name="CameraSystem" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 148, 224 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Sprite"]

[node name="MemberGroup" type="Node" parent="Sprite/Camera2D" groups=["cameras"]]
script = ExtResource( 6 )
_tag = "bronze"

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1076, 140 )
texture = ExtResource( 2 )

[node name="Camera2D2" type="Camera2D" parent="Sprite2"]

[node name="MemberGroup2" type="Node" parent="Sprite2/Camera2D2" groups=["cameras"]]
script = ExtResource( 6 )
_tag = "silvier"

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 780, 580 )
texture = ExtResource( 4 )

[node name="Camera2D3" type="Camera2D" parent="Sprite3"]

[node name="MemberGroup3" type="Node" parent="Sprite3/Camera2D3" groups=["cameras"]]
script = ExtResource( 6 )
_tag = "gold"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "cameras"
anims/cameras = SubResource( 1 )

[connection signal="change_camera" from="CameraSystem" to="." method="_on_CameraSystem_change_camera"]
[connection signal="remove_camera" from="CameraSystem" to="." method="_on_CameraSystem_remove_camera"]
